# svg_tool

./: README.md  TODO.md  pyproject.toml
svg_tool/: __init__.py  raster.py
svg_tool/parse/: __init__.py  base.py  circle.py  parents.py  path.py  poly.py  rect.py
svg_tool/tag/: __init__.py  base.py  path.py
svg_tool/tags/: __init__.py  base.py  path.py  root.py
svg_tool/utils/: __init__.py  colour.py  physics2d.py
svg_tool/utils/colour/: __init__.py  base.py  cie.py  ok.py  srgb.py  tv.py  x11.py
template_svgs/: SCALE.md
